--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         const loader = document.getElementById('loader');
 
         // --- API Endpoint for Secure Backend Proxy ---
-        const PROXY_ENDPOINT = 'https://us-central1-useful-figure-460804-s6.cloudfunctions.net/study-plan-proxy/proxy';
+        const PROXY_ENDPOINT = 'https://us-central1-useful-figure-460804-s6.cloudfunctions.net/study-plan-proxy/';
 
         // --- Helper for API Calls (Routes all requests through the secure proxy) ---
         async function makeApiCall(target, query, geminiBody = null) {
